@@ -38,24 +38,30 @@ endif
 # Deduce the kind of the selected compiler. Some build rules or compiler
 # options depend on the compiler used. As an alternative we could look at
 # preprocessor macros but this way seems sufficient for now.
-_cc := $(shell sh -c "command -v $(CC)")
-ifeq ($(_cc),/usr/bin/cc)
-_cc := $(realpath $(_cc))
+Toolchain._cc := $(shell sh -c "command -v $(CC)")
+ifeq ($(Toolchain._cc),/usr/bin/cc)
+Toolchain._cc := $(realpath $(Toolchain._cc))
 endif
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: _cc=$(_cc)))
-is_gcc=$(if $(findstring gcc,$(_cc)),yes)
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: is_gcc=$(is_gcc)))
-is_clang=$(if $(findstring clang,$(_cc)),yes)
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: is_clang=$(is_clang)))
-is_watcom=$(if $(findstring watcom,$(_cc)),yes)
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: is_watcom=$(is_watcom)))
-is_watcom_exe=$(if $(or $(findstring dos,$(_cc)),$(findstring win,$(_cc))),yes)
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: is_watcom_exe=$(is_watcom_exe)))
-is_tcc=$(if $(findstring tcc,$(_cc)),yes)
-$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: is_tcc=$(is_tcc)))
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain._cc=$(Toolchain._cc)))
+# Is CC the gcc compiler?
+Toolchain.is_gcc=$(if $(findstring gcc,$(Toolchain._cc)),yes)
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain.is_gcc=$(Toolchain.is_gcc)))
+# Is CC the clang compiler?
+Toolchain.is_clang=$(if $(findstring clang,$(Toolchain._cc)),yes)
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain.is_clang=$(Toolchain.is_clang)))
+# Is CC the open-watcom compiler?
+Toolchain.is_watcom=$(if $(findstring watcom,$(Toolchain._cc)),yes)
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain.is_watcom=$(Toolchain.is_watcom)))
+# Is CC the open-watcom compiler targeting a DOS/Windows target.
+Toolchain.is_watcom_exe=$(if $(or $(findstring dos,$(Toolchain._cc)),$(findstring win,$(Toolchain._cc))),yes)
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain.is_watcom_exe=$(Toolchain.is_watcom_exe)))
+# Is CC the tcc compiler?
+Toolchain.is_tcc=$(if $(findstring tcc,$(_cc)),yes)
+$(if $(findstring toolchain,$(DEBUG)),$(info DEBUG: Toolchain.is_tcc=$(Toolchain.is_tcc)))
 
+# The exe variable expands to .exe when the compiled binary should have such suffix.
 exe ?=
-ifeq ($(is_watcom_exe),yes)
+ifeq ($(Toolchain.is_watcom_exe),yes)
 exe = .exe
 endif
 
